installed platform for android, project.properties android-target, factory.js localStorage.getItem

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "android",
+    "ios"
+  ]
 }
